# IsoSearch

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  bacon.toml  deny.toml  lefthook.yml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
benches/: experiments.rs  retrieval.rs
docs/: benchmarking_v2.md  goal.md  technical_analysis.md
src/: lib.rs  main.rs
src/embedding/: mod.rs
src/graph/: mod.rs
src/hashing/: mod.rs
src/indexing/: mod.rs
src/normalization/: mod.rs
src/projection/: mod.rs
src/routing/: mod.rs
