[package]
name = "isosearch"
version = "0.1.0"
edition = "2024"
authors = ["Rohit Kumar"]
description = "A sub-millisecond approximate nearest neighbor retriever"
repository = "https://github.com/itisrohit/IsoSearch"
license = "MIT"

[dependencies]
# Core math and vector operations
ndarray = { version = "0.16", features = ["serde", "rayon"] }
ndarray-linalg = { version = "0.16", features = ["openblas-system"] } # Using system OpenBLAS for performance
rayon = "1.10"
bitvec = { version = "1.0", features = ["serde"] } # For LSH hash storage

# Serialization and Data
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rkyv = { version = "0.7.45", features = ["validation"] } # Zero-copy deserialization for 1GB index constraint

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] } # CLI for experiments
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
dotenvy = "0.15.7"

[dev-dependencies]
proptest = "1.5" # Property-based testing for LSH/HNSW
criterion = "0.5" # Micro-benchmarking for sub-ms targets

[profile.release]
opt-level = 3
lto = "fat" # Full link-time optimization for performance
codegen-units = 1
panic = "abort" # Reduce binary size and overhead
debug = true # Keep symbols for profiling

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
[[bench]]
name = "retrieval"
harness = false
